Added Go Back button to return to edit-batch page

--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -14,9 +14,12 @@
 
         <div class="ui fluid input">
             <input type="tel" class="ui input" placeholder="Student's Contact Number" name="student_contact" id="student_contact"><br>
-        </div>
+        </div><br>
         <button type="submit" class="ui green button">Add Student</button>
-    </form>
+    </form><br>
+    <a href="/edit-batch">
+        <button class="ui black button">Go Back</button>
+    </a>
 
 </div>
 
