--- a/templates/admission.html
+++ b/templates/admission.html
@@ -48,10 +48,10 @@
                 <img src="../static/imgs/search_batch.jpg">
             </div>
             <div class="content">
-                <div class="header"><a href="/search-batch">Search Batch</a></div>
+                <div class="header"><a href="/search">Search</a></div>
 
                 <div class="description">
-                    Search for a Batch in the Student Management System
+                    Search for a Student or a Batch in the Student Management System
 
                 </div>
             </div>
