Added Internal Assesment Tab to the Navigation Bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
         <nav>
             <div class="ui inverted pointing menu">
                 <a href="/admission" class="item">Admission</a>
+                <a href="/internal-assesment" class="item">Internal Assesment</a>
 
             </div>
         </nav>
