--- a/templates/edit_batch.html
+++ b/templates/edit_batch.html
@@ -3,11 +3,11 @@
 {% block body %}
 <div class="ui raised very padded text container segment">
     <h1>Edit Batch</h1>
-    <a href="/add-student">
+    <a href="/edit-batch/add-student">
         <button class="ui green button">Add Student</button>
     </a>
 
-    <a href="/remove-student">
+    <a href="/edit-batch/remove-student">
         <button class="ui red button">Remove Student</button>
     </a>
 
