Added Go Back Button

--- a/templates/remove_student.html
+++ b/templates/remove_student.html
@@ -14,9 +14,12 @@
 
         <div class="ui fluid input">
             <input type="tel" class="ui input" placeholder="Student's Roll Number" name="student_rollno" id="student_rollno"><br>
-        </div>
+        </div><br>
         <button type="submit" class="ui red button">Remove Student</button>
-    </form>
+    </form><br>
+    <a href="/edit-batch">
+        <button class="ui black button">Go Back</button>
+    </a>
 
 </div>
 
