Added Home to navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <header>
         <nav>
             <div class="ui inverted pointing menu">
+                <a href="/" class="item">Home</a>
                 <a href="/admission" class="item">Admission</a>
                 <a href="/internal-assesment" class="item">Internal Assesment</a>
 
