Added edit student option

--- a/templates/edit_batch.html
+++ b/templates/edit_batch.html
@@ -6,10 +6,15 @@
     <a href="/edit-batch/add-student">
         <button class="ui green button">Add Student</button>
     </a>
+    
+    <a href="/edit-batch/edit-student">
+        <button class="ui blue button">Edit Student</button>
+    </a>
 
     <a href="/edit-batch/remove-student">
         <button class="ui red button">Remove Student</button>
     </a>
+
 
     <a href="/admission">
         <button class="ui black button">Go Back</button>
