--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
                 <a href="/" class="item">Home</a>
                 <a href="/admission" class="item">Admission</a>
                 <a href="/internal-assesment" class="item">Internal Assesment</a>
+                <a href="/teachers-dashboard" class="item">Teacher's Dashboard</a>
+                <a href="/attendance" class="item">Attendance</a>
+                <a href="/account" class="item">Account</a>
 
             </div>
         </nav>
