Change route to internal-assesment/generate-test & internal-assesment/upload-marks

--- a/templates/internal_assesment.html
+++ b/templates/internal_assesment.html
@@ -9,7 +9,7 @@
                 <img src="../static/imgs/internal_assesment.jpg">
             </div>
             <div class="content">
-                <div class="header"><a href="/edit-batch">Upload Marks</a></div>
+                <div class="header"><a href="/internal-assesment/upload-marks">Upload Marks</a></div>
 
                 <div class="description">
                     Upload Marks of an existing test that has already been conducted
@@ -21,7 +21,7 @@
                 <img src="../static/imgs/generate_test.jpg">
             </div>
             <div class="content">
-                <div class="header"><a href="/delete-batch">Generate Test</a></div>
+                <div class="header"><a href="/internal-assesment/generate-test">Generate Test</a></div>
 
                 <div class="description">
                     Generate a new test with ease for students
