Changed route for upload batch and edit batchdelete batch

--- a/templates/admission.html
+++ b/templates/admission.html
@@ -9,7 +9,7 @@
                 <img src="../static/imgs/upload_batch.jpg">
             </div>
             <div class="content">
-                <div class=" header"><a href="/upload-batch">Upload Batch</a></div>
+                <div class=" header"><a href="/admission/upload-batch">Upload Batch</a></div>
 
                 <div class="description">
                     Add a new Batch to the Student Management System
@@ -22,7 +22,7 @@
                 <img src="../static/imgs/edit_batch.jpg">
             </div>
             <div class="content">
-                <div class="header"><a href="/edit-batch">Edit Batch</a></div>
+                <div class="header"><a href="/admission/edit-batch">Edit Batch</a></div>
 
                 <div class="description">
                     Edit an existing Batch in the Student Management System
@@ -35,7 +35,7 @@
                 <img src="../static/imgs/delete_batch.jpg">
             </div>
             <div class="content">
-                <div class="header"><a href="/delete-batch">Delete Batch</a></div>
+                <div class="header"><a href="/admission/delete-batch">Delete Batch</a></div>
 
                 <div class="description">
                     Discard an existing Batch in the Student Management System
