added the read_and_insert function to read and insert the csv file into the students  table

--- a/templates/upload_batch.html
+++ b/templates/upload_batch.html
@@ -48,7 +48,12 @@
     </a>
 
 </div>
+
 {% if filename == '' %}
+<div role="alert" class="c-alert c-alert--{{ message.message_type }}">
+    {{ message.text }}
+</div>
+{% else %}
 <div role="alert" class="c-alert c-alert--{{ message.message_type }}">
     {{ message.text }}
 </div>
