tried new color but didn't look good so changed it bck

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<div class="ui raised very padded medium text container segment">
+<div class="ui inverted raised very padded medium text container segment custom-bg-color">
     <h1>Home</h1>
     <div class="ui link cards">
         <div class="card">
