--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<div class="ui inverted raised very padded medium text container segment custom-bg-color">
-    <h1>Home</h1>
+<img src="../static/imgs/ISBR Logo - Transperent.gif" class="ui small centered image">
+<h1 class="ui centered header">Home</h1>
+<div class="ui inverted raised very padded medium text inverted orange container segment">
     <div class="ui link cards">
         <div class="card">
             <div class="image">
