--- a/templates/edit_batch.html
+++ b/templates/edit_batch.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<div class="ui raised very padded text container segment">
-    <h1>Edit Batch</h1>
+<img src="../static/imgs/ISBR Logo - Transperent.gif" class="ui small centered image">
+<h1 class="ui centered header">Edit Batch</h1>
+<div class="ui raised very padded text inverted orange container segment">
     <a href="/edit-batch/add-student">
         <button class="ui green button">Add Student</button>
     </a>
