added image tag for logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
             </div>
         </nav>
     </header>
+    <img src="{{ url_for('static',filename='imgs/logo.gif') }}" class="ui small centered image">
     {% block body%}
     {% endblock %}
     <script href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.js"></script>
