--- a/templates/plain_page.html
+++ b/templates/plain_page.html
@@ -18,6 +18,7 @@
             </div>
         </nav>
     </header>
+    <img src="{{ url_for('static',filename='imgs/logo.gif') }}" class="ui small centered image">
     {% block body %}
     {% endblock %}
 </body>
