--- a/templates/student_registration_page_2.html
+++ b/templates/student_registration_page_2.html
@@ -21,19 +21,19 @@
             <input type="text" name="batch" id="batch" class="ui input" placeholder="Batch" value="{{ batch }}" disabled>
         </div><br>
         <div class="ui fluid input">
-            <input type="number" name="semester" id="semester" class="ui input" placeholder="Semester">
+            <input type="number" name="semester" id="semester" class="ui input" placeholder="Semester" required>
         </div><br>
         <div class="inline fields">
             <label>Stream</label>
             <div class="field">
                 <div class="ui radio checkbox">
-                    <input type="radio" name="stream" value="sci">
+                    <input type="radio" name="stream" value="sci" required>
                     <label>Science</label>
                 </div>
             </div>
             <div class="field">
                 <div class="ui radio checkbox">
-                    <input type="radio" name="stream" value="com">
+                    <input type="radio" name="stream" value="com" required>
                     <label>Commerce</label>
                 </div>
             </div>
@@ -58,38 +58,45 @@
                         <label>Female</label>
                     </div>
                 </div>
+                <div class="field">
+                    <div class="ui radio checkbox">
+                        <input type="radio" name="sex" value="o">
+                        <label>Other</label>
+                    </div>
+                </div>
         </div><br>
 
         <label for="parent details" class="ui large header">Parent Details</label><br><br>
         
         <div class="ui fluid input">
-            <input type="text" name="fathers_name" id="fathers_name" class="ui input" placeholder="Father's Name">
+            <input type="text" name="fathers_name" id="fathers_name" class="ui input" placeholder="Father's Name" required>
         </div><br>
         <div class="ui fluid input">
-            <input type="text" name="mothers_name" id="mothers_name" class="ui input" placeholder="Mother's Name">
+            <input type="text" name="mothers_name" id="mothers_name" class="ui input" placeholder="Mother's Name" required>
         </div><br>
 
         <label for="contact details" class="ui large header">Contact Details</label><br><br>
         
         <div class="ui fluid input">
-            <input type="tel" name="fathers_contact" id="fathers_contact" class="ui input" placeholder="Father's Contact">
+            <input type="tel" name="fathers_contact" id="fathers_contact" class="ui input" placeholder="Father's Contact" required>
         </div><br>
         <div class="ui fluid input">
-            <input type="tel" name="mothers_contact" id="mothers_contact" class="ui input" placeholder="Mother's Contact">
+            <input type="tel" name="mothers_contact" id="mothers_contact" class="ui input" placeholder="Mother's Contact" required>
         </div><br>
         <div class="ui fluid input">
-            <input type="tel" name="students_contact" id="students_contact" class="ui input" placeholder="Student's Contact">
+            <input type="tel" name="students_contact" id="students_contact" class="ui input" placeholder="Student's Contact" required>
         </div><br>
         <div class="ui fluid input">
-            <input type="tel" name="whatsapp_no" id="whatsapp_no" class="ui input" placeholder="WhatsApp Number">
+            <input type="tel" name="whatsapp_no" id="whatsapp_no" class="ui input" placeholder="WhatsApp Number" required>
         </div><br>
         
         <label for="student image" class="ui large header">Student's Image</label><br><br>
         
         <div class="ui fluid input">
-            <input type="file" name="photo" id="photo" class="ui input" accept="png">
+            <input type="file" name="photo" id="photo" class="ui input" accept="png" required>
         </div><br>
         <button type="submit" class="ui black centered button">Submit Details</button>
     </form>
 </div>
+
 {% endblock %}
