added the required tag to all the fields accept the disabled one because it gets auto-filled

--- a/templates/student_registration_page_1.html
+++ b/templates/student_registration_page_1.html
@@ -8,13 +8,13 @@
     <form action="" method="post" enctype="multipart/form-data">
         <label for="student details" class="ui large header">Enter Details</label><br><br>
         <div class="ui fluid input">
-            <input type="text" name="department" id="department" class="ui input" placeholder="Department">
+            <input type="text" name="department" id="department" class="ui input" placeholder="Department" required>
         </div><br>
         <div class="ui fluid input">
-            <input type="number" name="batch" id="batch" class="ui input" placeholder="Batch">
+            <input type="number" name="batch" id="batch" class="ui input" placeholder="Batch" required>
         </div><br>
         <div class="ui fluid input">
-            <input type="text" name="uucms_no" id="uucms_no" class="ui input" placeholder="Roll Number">
+            <input type="text" name="uucms_no" id="uucms_no" class="ui input" placeholder="Roll Number" required>
         </div><br>
 
         <button type="submit" class="ui black centered button">Next</button>
