--- a/templates/edit_batch.html
+++ b/templates/edit_batch.html
@@ -5,15 +5,15 @@
 <h1 class="ui centered header">Edit Batch</h1>
 <div class="ui raised very padded text inverted orange container segment">
     <a href="/edit-batch/add-student">
-        <button class="ui green button">Add Student</button>
+        <button class="ui black button">Add Student</button>
     </a>
     
     <a href="/edit-batch/edit-student">
-        <button class="ui blue button">Edit Student</button>
+        <button class="ui black button">Edit Student</button>
     </a>
 
     <a href="/edit-batch/remove-student">
-        <button class="ui red button">Remove Student</button>
+        <button class="ui black button">Remove Student</button>
     </a>
 
 
