Made semester field default and disabled

--- a/templates/student_registration_page_2.html
+++ b/templates/student_registration_page_2.html
@@ -21,7 +21,7 @@
             <input type="text" name="batch" id="batch" class="ui input" placeholder="Batch" value="{{ batch }}" disabled>
         </div><br>
         <div class="ui fluid input">
-            <input type="number" name="semester" id="semester" class="ui input" placeholder="Semester" required>
+            <input type="number" name="semester" id="semester" class="ui input" placeholder="Semester" value="{{ semester }}" disabled>
         </div><br>
         <div class="inline fields">
             <label>Stream</label>
