Added department entry box

--- a/templates/faculty_registration.html
+++ b/templates/faculty_registration.html
@@ -2,7 +2,7 @@
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
 
-<h1 class="ui centered header">Student Registration Form</h1>
+<h1 class="ui centered header">Faculty Registration Form</h1>
 <div class="ui raised very padded medium text  inverted orange container segment">
 
     <form action="" method="post" enctype="multipart/form-data">
@@ -13,6 +13,10 @@
         
         <div class="ui fluid input">
             <input type="text" name="faculty_name" id="faculty_name" class="ui input" placeholder="Faculty Name">
+        </div><br>
+
+        <div class="ui fluid input">
+            <input type="text" name="department" id="department" class="ui input" placeholder="Department">
         </div><br>
         
         <label for="faculty contact" class="ui large header">Contact Details</label><br><br>
