Moved the page heading outside the orange box

--- a/templates/subject_allotment_page.html
+++ b/templates/subject_allotment_page.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<div class="ui raised very padded medium text container segment">
-    <h1>Subject Allotment</h1>
+<h1 class="ui centered header">Subject Allotment</h1>
+<div class="ui raised very padded medium text inverted orange container segment">
     <form action="" method="post" enctype="multipart/form-data">
         <div class="ui fluid input">
             <input type="text" name="dept" id="dept" class="ui input" placeholder="Department">
