removed subject allotment button

--- a/templates/teachers_dashboard.html
+++ b/templates/teachers_dashboard.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<div class="ui raised very padded medium text container segment">
-    <h1>Teachers Dashboard</h1>
+<h1 class="ui centered header">Teachers Dashboard</h1>
+<div class="ui raised very padded medium text inverted orange container segment">
     
-    <a href="/teachers-dashboard/subject-allotment">
-      <button class="ui violet button">Subject Allotment</button>
-    </a>
 </div>
 {% endblock %}
