changed heading and added new segments inside the main body

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -1,19 +1,28 @@
 {% extends "base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<h1 class="ui centered header">Subject Allotment</h1>
+<h1 class="ui centered header">Admin Dashboard</h1>
 <div class="ui raised very padded medium text inverted orange container segment">
     <h2 class="ui centered header">Subject Related</h2>
-    <a href="/teachers-dashboard/subject-allotment">
-        <button class="ui black button">Subject Allotment</button>
-    </a>
+    <div class="ui raised very padded small text inverted yellow segment">
+        <a href="/teachers-dashboard/subject-allotment">
+            <button class="ui black button">Subject Allotment</button>
+        </a>
+        <a href="/teachers-dashboard/subject-allotment">
+            <button class="ui black button">Add Syllabus</button>
+        </a>
+        <a href="/teachers-dashboard/subject-allotment">
+            <button class="ui black button">Add Course</button>
+        </a>
+    </div>
     <h2 class="ui centered header">Registration Related</h2>
-    <a href="/student-registration/1">
-        <button class="ui black button">Student Registration</button>
-    </a>
-    <a href="/faculty-registration">
-        <button class="ui black button">Faculty Registration</button>
-    </a>
-
+    <div class="ui raised very padded small text inverted yellow segment">
+        <a href="/student-registration/1">
+            <button class="ui black button">Student Registration</button>
+        </a>
+        <a href="/faculty-registration">
+            <button class="ui black button">Faculty Registration</button>
+        </a>
+    </div>
 </div>
 {% endblock %}
