changed button routes

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -8,10 +8,10 @@
         <a href="/admin-dashboard/subject-allotment">
             <button class="ui black button">Subject Allotment</button>
         </a>
-        <a href="/admin-dashboard/subject-allotment">
-            <button class="ui black button">Add Syllabus</button>
+        <a href="/admin-dashboard/add-subject">
+            <button class="ui black button">Add Subject</button>
         </a>
-        <a href="/admin-dashboard/subject-allotment">
+        <a href="/admin-dashboard/add-course">
             <button class="ui black button">Add Course</button>
         </a>
     </div>
