Moved heading outside and changed colors

--- a/templates/internal_assesment.html
+++ b/templates/internal_assesment.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<div class="ui raised very padded medium text container segment">
-    <h1>Internal Assesment</h1>
+<h1 class="ui centered header">Internal Assesment</h1>
+<div class="ui raised very padded medium  inverted orange text container segment">
     <div class="ui link cards">
         <div class="card">
             <div class="image">
