Changed button text from get form to register

--- a/templates/student_registration_page_1.html
+++ b/templates/student_registration_page_1.html
@@ -36,7 +36,7 @@
                     <td data-label="Batch">{{ batch }}</td>
                     <td data-label="Form Link">
                         <a href="/student-registration/2/{{ uucms_no }}">
-                            <button class="ui black button">Get Form</button>
+                            <button class="ui black button">Register</button>
                         </a>
                     </td>
                 </tr>
