--- a/templates/add_subject.html
+++ b/templates/add_subject.html
@@ -6,15 +6,15 @@
     <form action="" method="post" enctype="multipart/form-data">
         <label for="faculty details" class="ui large header">Subject Details</label><br><br>
         <div class="ui fluid input">
-            <input type="text" name="subject_name" id="subject_name" class="ui input" placeholder="Subject Name">
+            <input type="text" name="subject_name" id="subject_name" class="ui input" placeholder="Subject Name" required>
         </div><br>
         
         <div class="ui fluid input">
-            <input type="text" name="course_name" id="course_name" class="ui input" placeholder="Department">
+            <input type="text" name="course_name" id="course_name" class="ui input" placeholder="Department" required>
         </div><br>
         
         <div class="ui fluid input">
-            <input type="number" name="semester" id="semester" class="ui input" placeholder="Semester">
+            <input type="number" name="semester" id="semester" class="ui input" placeholder="Semester" required>
         </div><br>
 
         <div class="inline fields">
@@ -41,6 +41,12 @@
                 <div class="ui radio checkbox">
                     <input type="radio" name="subject_type" value="skill enhancement course">
                     <label>Skill Enhancement Course</label>
+                </div>
+            </div>
+            <div class="field">
+                <div class="ui radio checkbox">
+                    <input type="radio" name="subject_type" value="lab">
+                    <label>Lab</label>
                 </div>
             </div>
         </div><br>
