Added new option called Co Extra Curricular

--- a/templates/add_subject.html
+++ b/templates/add_subject.html
@@ -45,6 +45,12 @@
             </div>
             <div class="field">
                 <div class="ui radio checkbox">
+                    <input type="radio" name="subject_type" value="Co and Extra Curricular">
+                    <label>Co and Extra Curricular</label>
+                </div>
+            </div>
+            <div class="field">
+                <div class="ui radio checkbox">
                     <input type="radio" name="subject_type" value="lab">
                     <label>Lab</label>
                 </div>
