Changed order of sections, added one more section called course related and moved add course and added manage batch subjects button

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -3,6 +3,26 @@
 {% block body %}
 <h1 class="ui centered header">Admin Dashboard</h1>
 <div class="ui raised very padded medium text inverted orange container segment">
+    <h2 class="ui centered header">Registration Related</h2>
+    <div class="ui raised very padded small text inverted yellow segment">
+        <a href="/student-registration">
+            <button class="ui black button">Student Registration</button>
+        </a>
+        <a href="/faculty-registration">
+            <button class="ui black button">Faculty Registration</button>
+        </a>
+    </div>
+
+    <h2 class="ui centered header">Course Related</h2>
+    <div class="ui raised very padded small text inverted yellow segment">
+        <a href="/admin-dashboard/add-course">
+            <button class="ui black button">Add Course</button>
+        </a>
+        <a href="/admin-dashboard/manage-batch-subjects">
+            <button class="ui black button">Manage Batch Subjects</button>
+        </a>
+    </div>
+
     <h2 class="ui centered header">Subject Related</h2>
     <div class="ui raised very padded small text inverted yellow segment">
         <a href="/admin-dashboard/subject-allotment">
@@ -10,18 +30,6 @@
         </a>
         <a href="/admin-dashboard/add-subject">
             <button class="ui black button">Add Subject</button>
-        </a>
-        <a href="/admin-dashboard/add-course">
-            <button class="ui black button">Add Course</button>
-        </a>
-    </div>
-    <h2 class="ui centered header">Registration Related</h2>
-    <div class="ui raised very padded small text inverted yellow segment">
-        <a href="/student-registration/1">
-            <button class="ui black button">Student Registration</button>
-        </a>
-        <a href="/faculty-registration">
-            <button class="ui black button">Faculty Registration</button>
         </a>
     </div>
 </div>
