Changed batch input type from number to text

--- a/templates/student_registration_page_1.html
+++ b/templates/student_registration_page_1.html
@@ -11,7 +11,7 @@
             <input type="text" name="department" id="department" class="ui input" placeholder="Department" required>
         </div><br>
         <div class="ui fluid input">
-            <input type="number" name="batch" id="batch" class="ui input" placeholder="Batch" required>
+            <input type="text" name="batch" id="batch" class="ui input" placeholder="Batch" required>
         </div><br>
         <div class="ui fluid input">
             <input type="text" name="uucms_no" id="uucms_no" class="ui input" placeholder="Roll Number" required>
