added back to admin dashboard in the navbar

--- a/templates/plain_page.html
+++ b/templates/plain_page.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="ui inverted pointing menu">
-
+                <a href="/admin-dashboard" class="item">Back To Admin Dashboard</a>
             </div>
         </nav>
     </header>
