added a logout button

--- a/templates/account_page.html
+++ b/templates/account_page.html
@@ -18,9 +18,13 @@
           <td data-label="Information">{{ details_info }}</td>
         </tr>
         {% endfor %}
-
+        
       </tbody>
     </table>
+    <a href="/logout">
+      <button class="ui black button">Logout</button>
+    </a>
+    
   </div>
 </div>
 
